# thirdHand

./: .env.example  BROWSER_AUTONOMY_REVIEW_PLAN.md  BROWSER_REFACTOR_INSTRUCTIONS.md  BROWSER_STEP_VERIFICATION_ROADMAP.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.browser-profile/Default/: DIPS
.browser-profile/Default/DawnGraphiteCache/: index
.browser-profile/Default/DawnWebGPUCache/: index
migrations/: env.py
migrations/versions/: 1701807c933a_initial_schema.py  52d4d8fb5cc9_add_foreign_keys_to_user_id_columns.py  660e37e03a1f_add_session_summaries_and_estimated_.py
plans/: browser_agent_fixes.md  enhanced_visual_assist.md  forced_visual_assist.md  remove_hardcoded_heuristics.md  remove_scoring_from_tools.md  scalable_browser_agent_architecture.md
src/thirdhand/: __init__.py
tests/: conftest.py  test_agent_state.py  test_auto_element_resolver.py  test_bot_handlers.py  test_bot_middlewares.py  test_browser_agent.py  test_browser_auth.py  test_browser_autonomy_scenarios.py  test_browser_flow.py  test_browser_page_state.py  test_browser_recovery.py  test_browser_reporting.py  test_browser_step_verification.py  test_browser_tools.py  test_celery_tasks.py  test_cycle_detector.py  test_graph.py  test_page_classifier.py  test_parse_input_node.py  test_planner.py  test_policy.py  test_profile_response_nodes.py  test_recovery.py  test_reminder_nodes.py  test_search_nodes.py  test_stuck_interceptor.py  test_sub_intent.py  test_task_context_node.py  test_telegram_format.py  test_tracking.py  test_validator.py
(+89 files in other folders)
