[project]
name = "thirdhand"
version = "0.1.0"
description = "Personal AI assistant Telegram bot for routine automation"
authors = [
    {name = "dilweb",email = "yxs.crevier@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.14.0",
    
    # Settings
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    
    # Telegram Bot
    "aiogram>=3.14.0",
    
    # AI Agent
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "playwright>=1.54.0",

    # Celery
    "celery[redis]>=5.4.0",
    
    # Utilities
    "dateparser>=1.2.0",
    "pytz>=2024.0",
    
    # Logging
    "structlog>=24.0.0",
]

[tool.poetry]
packages = [{include = "thirdhand", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
aioresponses = "^0.7.0"
aiosqlite = "^0.20.0"
ruff = "^0.15.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy relationship forward refs (Mapped["User"], …)
"src/thirdhand/models/**/*.py" = ["F821"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
